--- a/assets/header.css
+++ b/assets/header.css
@@ -181,10 +181,12 @@
 
 @keyframes scaleUp {
     0% {
+        opacity: 0%;
         scale: 0;
         visibility: visible;
     }
     100% {
+        opacity: 100%;
         scale: 1;
         visibility: visible;
     }
