--- a/assets/header.css
+++ b/assets/header.css
@@ -69,12 +69,14 @@
     display: flex;
     flex-direction: row;
     z-index: 2;
+    transition: cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
 .search_box.active > .black_fade_in {
     width: 100vw;
     height: 100vh;
     position: absolute;
+    backdrop-filter: blur(1.5px);
     background-color: rgba(0, 0, 0, 0.692);
     animation: fadeIn 400ms cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
 }
