--- a/assets/custom-banner.css
+++ b/assets/custom-banner.css
@@ -2,38 +2,50 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  min-height: 90dvh;
-  position: relative;
-  background-color: #0d3135;
-  padding-bottom: 30px;
-  padding-top: 15px;
+  height: max-content;
+  padding: 30px 0px;
 }
 
 .custom-mug-banner {
-  max-width: 95%;
-  border-radius: 40px;
-  width: 100%;
-  background-image: url("./main-banner-bg.png");
-  background-position: center;
-  background-size: cover;
-  overflow: hidden;
-  padding: 40px 20px;
-  direction: rtl;
+  width: 100dvw;
+  overflow: visible;
+  height: max-content;
   text-align: center;
 }
 
-.banner-content {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: end;
-  justify-content: end;
-  margin: 0 auto;
+.slide_container {
+  height: 75dvh;
+
 }
 
+.banner-content {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  position: relative;
+}
+
+.image_banner {
+  width: 100dvw;
+  object-fit: cover;
+  margin: 0px 50px;
+}
+
+.image_banner img {
+  border-radius: 40px;
+  height: 75dvh;
+  width: 100%;
+  object-fit: cover;
+}
+
+
+
+
 .banner-text {
-  max-width: 600px;
-  margin: 0 auto;
+  text-align: center;
+  width: 100%;
+  position: absolute;
+  bottom: 10%;
 }
 
 .banner-title {
