--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -2,6 +2,10 @@
 
 <html lang="{{ request.locale.iso_code }}" dir="{% if request.locale.iso_code == 'ar' or request.locale.iso_code == 'he' or request.locale.iso_code == 'fa' %}rtl{% else %}ltr{% endif %}" class="js" lang="{{ request.locale.iso_code }}">
   <head>
+
+    {{ 'swiper.css' | asset_url | stylesheet_tag }}
+    <script src="{{ 'swiper.js' |  asset_url }}" defer="defer"></script>
+    
     {% if request.locale.iso_code == 'ar' or request.locale.iso_code == 'he' or request.locale.iso_code == 'fa' %}
       <link rel="stylesheet" href="{{ 'rtl.css' | asset_url }}">
     {% endif %}
@@ -38,6 +42,7 @@
     <script src="{{ 'details-disclosure.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'details-modal.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'search-form.js' | asset_url }}" defer="defer"></script>
+
 
     {%- if settings.animations_reveal_on_scroll -%}
       <script src="{{ 'animations.js' | asset_url }}" defer="defer"></script>
