changed the default order of sections
made the banner as the first and only section in the main page

--- a/sections/custom-banner.liquid
+++ b/sections/custom-banner.liquid
@@ -63,7 +63,7 @@ document.addEventListener("DOMContentLoaded", function () {
   "blocks": [
     {
       "type": "image_slide",
-      "name": "image_lide",
+      "name": "image_slide",
       "settings": [
         {
           "type": "image_picker",
