--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -6,13 +6,14 @@
     height: max-content;
     padding: 50px 0px;
     user-select: none;
+    background-color: #0d3135;
 }
 
 .featured-collection {
-    width: 80dvw;
-    height: 60dvh;
+    width: 75dvw;
+    height: 50dvh;
     display: flex;
-    gap: 3%;
+    gap: 2%;
     flex-shrink: 0;
 }
 
@@ -52,7 +53,7 @@
     width: 75%;
     overflow-y: hidden;
     overflow-x: scroll;
-    white-space: nowrap;
+    white-space: normal;
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
@@ -71,8 +72,8 @@
 
 .product-card {
     height: 100%;
-    width: 345px;
-    background-color: rgb(37, 37, 37);
+    max-width: 25%;
+    background-color: #f2f2f2;
     overflow: hidden;
     border-radius: 30px;
     display: flex;
@@ -93,3 +94,65 @@
     user-select: none;
     pointer-events: none;
 }
+
+.product-card p {
+    padding: 0px;
+    margin: 0px;
+}
+
+
+.product-information {
+    padding: 5%;
+    font-weight: bold;
+}
+
+.buttons {
+    padding: 0% 5%;
+    pointer-events: all !important;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+
+
+button.buy-now-button {
+    all: unset;
+    color: #0d3135;
+    padding: 3px 25px;
+    background-color: #F7995F;
+    border-radius: 999px;
+    transition: 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    cursor: pointer;
+}
+
+button.buy-now-button:hover {
+    background-color: rgb(22, 22, 22);
+    color: rgb(255, 255, 255);
+    scale: 0.95;
+}
+
+button.add-to-cart-button:hover {
+    background-color: rgb(22, 22, 22);
+    scale: 0.95;
+}
+
+button.add-to-cart-button:hover > img {
+    filter: invert(97%) sepia(44%) saturate(0%) hue-rotate(98deg) brightness(105%) contrast(103%);
+}
+
+.add-to-cart-button {
+    all: unset;
+    color: #0d3135;
+    background-color: #F7995F;
+    border-radius: 50%;
+    padding: 8px;
+    font-weight: bold;
+    transition: 200ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    cursor: pointer;
+    height: 17px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
