--- a/assets/coffe-banner.css
+++ b/assets/coffe-banner.css
@@ -76,4 +76,12 @@
     flex-direction: column;
     gap: 20px;
   }
+
+  .box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
 }
