--- a/assets/custom-banner.css
+++ b/assets/custom-banner.css
@@ -54,9 +54,8 @@
   padding: 0px;
   margin: 0px;
   font-size: 40px;
-  font-weight: 700;
   text-align: center;
-  font-weight: bolder;
+  font-weight: bold;
   color: #083135;
   padding-bottom: 10px;
 }
@@ -99,10 +98,55 @@
 }
 
 /* Responsive styles */
+
+@media (min-width: 10px){
+
+  .banner-container {
+    padding: 0px;
+  }
+
+  .banner-title {
+    font-size: 30px;
+    width: 85%;
+  } 
+
+  .banner-description {
+    font-size: 15px;  
+    width: 85%;
+  }
+
+  .slide_container {
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .image_banner {
+    margin: 0px;
+  }
+
+  .image_banner img {
+    width: 90%;
+    border-radius: 20px;
+  }
+
+
+}
+
+
 @media (min-width: 768px) {
+
+  .banner-container {
+    padding-bottom: 40px;
+  }
+
   .banner-content {
     flex-direction: row;
     text-align: right;
+  }
+
+  .image_banner img {
+    width: 100%;
+    border-radius: 40px;
   }
 
   .mug-image {
@@ -112,7 +156,11 @@
   }
 
   .banner-title {
-    font-size: 36px;
+    font-size: 40px;
+  }
+
+  .image_banner {
+    margin: 0px  50px;
   }
 
   .banner-description {
