--- a/assets/header.css
+++ b/assets/header.css
@@ -31,13 +31,15 @@
     filter: invert(100%) sepia(10%) saturate(1296%) hue-rotate(195deg) brightness(125%) contrast(111%);
 }
 
-.logo_container {
+.logo_container_middle {
     height: 50px;
 }
 
 .nav_link {
     font-weight: bold;
     color: #F2F2F2;
+    font-size: 16px;
+    line-height: 16px;
 }
 
 .main-menu {
@@ -96,6 +98,25 @@
     transform: scale(0.8);
 }
 
+.sub_link {
+    font-size: 15px;
+    line-height: 15px;
+    color: white;
+}
+
+.nav_icon,.nav_link,.sub_link,.sub_sub_link,.logo_desktop {
+    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.5);
+}
+
+.nav_icon:hover,.logo_desktop:hover {
+    scale: 0.85;
+}
+
+.menu-item:hover > .nav_link,.sub_link:hover,.sub_sub_link:hover {
+    color: rgb(180, 180, 180);
+    font-size: 85%;
+}
+
 .search_box.active .search_field:hover {
     transform: scale(1.05);
 }
@@ -107,7 +128,7 @@
 
 .search_box_content {
     position: relative;
-    bottom: 20%;
+    bottom: 25%;
     display: flex;
     flex-direction: row ;
     justify-content: center;
@@ -145,30 +166,43 @@
 }
 
 
-#results {
-    border: 1px solid #ccc;
-    max-width: 300px;
-    padding: 5px;
-    margin-top: 5px;
-    background: white;
-    position: absolute;
-    z-index: 1000;
+
+.submenu {
+    display: none;
+    flex-direction: column;
+    justify-content: flex-start;
+    position: relative;
+    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    height: 0px;
+    width: 100dvw;
+    padding: 0px 20%;
+    padding-top: 20px;
+    border-radius: 30px;
+    transform-origin: center;
+    background-color: #0d3135;
+    position: fixed;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    opacity: 0%;
+    transform: translateX(-50%);
+    z-index: 0;
 }
-.result {
+
+.menu-item {
+    height: max-content;
+    width: max-content;
+}
+
+
+
+.menu-item:hover > .submenu {
     display: flex;
-    align-items: center;
-    gap: 10px;
-    padding: 5px;
-    text-decoration: none;
-    color: black;
+    height: 35dvh;
+    opacity: 100%;
 }
-.result:hover {
-    background: #f0f0f0;
-}
-.no-results {
-    color: gray;
-    padding: 5px;
-}
+
+
+
 
 
 
@@ -191,5 +225,97 @@
         opacity: 100%;
         scale: 1;
         visibility: visible;
+    }
+}
+
+
+
+/* Responsiveness */
+
+@media (min-width: 10px){
+    .nav_icon.cart {
+        display: none;
+    }
+
+    .nav_icon.account {
+        display: none;
+    }
+
+    .nav_icon.search {
+        -webkit-tap-highlight-color: transparent;
+    }
+
+    .nav_links {
+        display: none;
+    }
+
+    .logo_desktop {
+        display: none;
+        -webkit-tap-highlight-color: transparent;
+    }
+
+    .logo_mobile {
+        -webkit-tap-highlight-color: transparent;
+    }
+
+    .logo_container_left {
+        height: 25px;
+    }
+
+    .search_field {
+        width: 75dvw;
+    }
+
+    .search_close_icon {
+        display: none;
+    }
+}
+
+
+@media (min-width: 768px){
+    .nav_icon.cart {
+        display: flex;
+    }
+
+    .nav_icon.account {
+        display: flex;
+    }
+
+    .hamburger_menu {
+        display: none;
+    }
+    .logo_mobile {
+        display: none;
+    }
+    .logo_desktop {
+        display: flex;
+    }
+
+    .logo_container_left {
+        height: max-content;
+    }
+
+    .logo_container_left > .logo_desktop {
+        height: 50px;
+        width: auto;
+    }
+
+    .nav_links {
+        display: flex;
+    }
+
+    .search_field {
+        width: 500px;
+    }
+
+    .search_close_icon {
+        display: flex;
+    }
+}
+
+@media (min-width: 1080px){
+
+    .header {
+        max-width: 1400px;
     }
 }
