--- a/assets/coffe-banner.css
+++ b/assets/coffe-banner.css
@@ -63,6 +63,13 @@
 }
 
 @media (max-width: 768px) {
+  .content {
+    max-width: 95%;
+  }
+
+  .coffee-section {
+    background-image: none;
+  }
   .coffee-container {
     flex-direction: column;
     text-align: center;
@@ -77,11 +84,20 @@
     gap: 20px;
   }
 
+  .box h2 {
+    font-size: 24px;
+  }
+
+  .box p {
+    font-size: 12px;
+  }
+
   .box {
     display: flex;
+    background-color: #1eb5c7;
     flex-direction: column;
+    border-radius: 25px;
     justify-content: center;
     align-items: center;
   }
-
 }
