--- a/assets/images-slider.css
+++ b/assets/images-slider.css
@@ -25,6 +25,7 @@
 
 .image-item {
   width: 100%;
+  height: 32dvh;
   border-radius: 25px;
   overflow: hidden;
 }
@@ -79,9 +80,13 @@
 @media screen and (max-width: 767px) {
   .swiper-slide {
     /* Center slide will be fully visible */
-    width: 60% !important;
+    width: 100% !important;
     /* Show quarter of previous/next slides */
     /* margin: 0 -5% !important; */
+  }
+
+  .image-item img {
+    width: 100%;
   }
 
   .swiper-slide-prev,
