--- a/assets/coffe-banner.css
+++ b/assets/coffe-banner.css
@@ -63,25 +63,37 @@
 }
 
 @media (max-width: 768px) {
+  .content {
+    max-width: 95%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .coffee-section {
+    background-image: none;
+  }
   .coffee-container {
     flex-direction: column;
     text-align: center;
-  }
-  .coffee-image {
-    margin: 0 auto 20px;
-  }
-  .content {
-    display: flex;
-    justify-content: start;
-    flex-direction: column;
     gap: 20px;
+  }
+
+  .box h2 {
+    font-size: 24px;
+  }
+
+  .box p {
+    font-size: 12px;
   }
 
   .box {
     display: flex;
+    background-color: #1eb5c7;
     flex-direction: column;
+    border-radius: 25px;
     justify-content: center;
     align-items: center;
   }
-
 }
