--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -11,7 +11,7 @@
 
 .featured-collection {
     width: 75dvw;
-    height: 50dvh;
+    height: max-content;
     display: flex;
     gap: 2%;
     flex-shrink: 0;
@@ -71,13 +71,14 @@
 }
 
 .product-card {
-    height: 100%;
-    max-width: 25%;
+    height: 500px;
+    width: 280px;
     background-color: #f2f2f2;
     overflow: hidden;
     border-radius: 30px;
     display: flex;
     flex-direction: column;
+    position: relative;
 }
 
 .product-image {
@@ -106,14 +107,50 @@
     font-weight: bold;
 }
 
+.product-title {
+    width: 100%;
+}
+
+.product-prices {
+    font-size: 21px;
+    line-height: 21px;
+    font-weight: bold;
+}
+
 .buttons {
-    padding: 0% 5%;
+    width: 100%;
+    padding: 0% 3%;
     pointer-events: all !important;
     display: flex;
     align-items: center;
     gap: 10px;
+    justify-self: flex-end;
+    position: absolute;
+    bottom: 10px;
 }
 
+
+.prev_button {
+    all: unset;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #f2f2f2;
+    font-size: 20px;
+    line-height: 20px;
+    padding: 10px;
+    background-color: #f2f2f223;
+    border-radius: 999px;
+    margin-right: 15px;
+    transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.prev_button:hover {
+    transform: scale(0.85);
+    background-color: #f2f2f2;
+    color: black;
+}
 
 
 button.buy-now-button {
