--- a/sections/custom-banner.liquid
+++ b/sections/custom-banner.liquid
@@ -9,7 +9,7 @@
         <div class="banner-content swiper-slide">
 
           <div class="image_banner">
-            <img width="100%" height="auto" src="{{ block.settings.banner_image |  image_url }}" alt="">
+            <img width="100%" height="auto" src="{{ block.settings.banner_image |  image_url }}" alt="" loading="lazy">
           </div>
 
           <div class="banner-text">
