--- a/assets/featured-collection.css
+++ b/assets/featured-collection.css
@@ -69,6 +69,7 @@
     width: max-content;
     height: 100%;
     display: flex;
+    justify-content: flex-start;
     gap: 1%;
     flex-shrink: 0;
 }
@@ -133,7 +134,7 @@
 }
 
 
-.prev_button {
+.prev_button,.next_button {
     all: unset;
     cursor: pointer;
     display: flex;
@@ -145,15 +146,23 @@
     padding: 10px;
     background-color: #f2f2f223;
     border-radius: 999px;
-    margin-right: 15px;
     transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.prev_button:hover {
+.prev_button {
+    margin-right: 15px;
+}
+.next_button {
+    margin-left: 15px;
+}
+
+
+.prev_button:hover,.next_button:hover {
     transform: scale(0.85);
     background-color: #f2f2f2;
     color: black;
 }
+
 
 
 button.buy-now-button {
