--- a/assets/header.css
+++ b/assets/header.css
@@ -233,6 +233,11 @@
 /* Responsiveness */
 
 @media (min-width: 10px){
+
+    .header {
+        width: 90%;
+    }
+
     .nav_icon.cart {
         display: none;
     }
@@ -273,6 +278,10 @@
 
 
 @media (min-width: 768px){
+    .header {
+        width: 80%;
+    }
+
     .nav_icon.cart {
         display: flex;
     }
