--- a/assets/header.css
+++ b/assets/header.css
@@ -5,6 +5,7 @@
     width: 100%;
     height: max-content;
     background-color: #0d3135;
+    overflow: hidden;
 }
 
 .header {
@@ -23,6 +24,7 @@
 
 
 .header_content {
+    height: 100%;
     display: flex;
     align-items: center;
 }
@@ -36,6 +38,9 @@
 }
 
 .nav_link {
+    height: 100%;
+    display: block;
+    align-content: center;
     font-weight: bold;
     color: #F2F2F2;
     font-size: 16px;
@@ -43,12 +48,15 @@
 }
 
 .main-menu {
+    height: 100%;
     display: flex;
     gap: 20px;
     list-style: none;
     padding: 0px;
     margin: 0px;
 }
+
+
 
 .nav_icon {
     cursor: pointer;
@@ -98,23 +106,43 @@
     transform: scale(0.8);
 }
 
+
+
 .sub_link {
-    font-size: 15px;
-    line-height: 15px;
+    font-size: 17px;
+    line-height: 17px;
+    color: white;
+    font-weight: bold;
+}
+
+.sub_sub_link {
+    font-size: 12px;
+    line-height: 12px;
     color: white;
 }
 
+.sub_sub_link_container {
+    height: max-content;
+}
+
 .nav_icon,.nav_link,.sub_link,.sub_sub_link,.logo_desktop {
-    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.5);
+    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.08);
 }
 
 .nav_icon:hover,.logo_desktop:hover {
     scale: 0.85;
 }
 
-.menu-item:hover > .nav_link,.sub_link:hover,.sub_sub_link:hover {
+.menu-item:hover > .nav_link,.sub_link:hover {
+    height: 100%;
     color: rgb(180, 180, 180);
-    font-size: 90%;
+    font-size: 95%;
+}
+
+.sub_sub_link:hover {
+    font-size: 11.5px;
+    line-height: 11.5px;
+    opacity: 0.5;
 }
 
 .search_box.active .search_field:hover {
@@ -169,27 +197,42 @@
 
 .submenu {
     display: none;
-    flex-direction: column;
-    justify-content: flex-start;
-    position: relative;
-    transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    justify-content: center;
     height: 0px;
     width: 100dvw;
-    padding: 0px 20%;
-    padding-top: 20px;
-    border-radius: 30px;
+    padding-top: 35px;
+    border-radius: 5px;
     transform-origin: center;
-    background-color: #0d3135;
-    position: fixed;
-    transform: translate(-50%, -50%);
-    left: 50%;
+    background-color: #d3793c;
+    position: absolute;
     opacity: 0%;
-    transform: translateX(-50%);
-    z-index: 0;
+    top: 115px;
+    right: 0px;
+}
+
+.sub_links_container {
+    width: 70%;
+    padding-right: 10%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.menu-item:hover > .submenu > .sub_links_container > .sub_link_container {
+    animation: fadeIn 300ms cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
+    animation-delay: 200ms;
+}
+
+.sub-submenu {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
 .menu-item {
-    height: max-content;
+    height: 100%;
     width: max-content;
 }
 
@@ -197,21 +240,43 @@
 
 .menu-item:hover > .submenu {
     display: flex;
-    height: 35dvh;
-    opacity: 100%;
+    animation: dropDown 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1) forwards;
+}
+
+
+.sub_link_container {
+    padding-bottom: 5px;
+    height: 50%;
+    width: 20%;
+    opacity: 0%;
+    transition: 300ms cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
+    
 }
 
 
 
+@keyframes dropDown {
 
+    0% {
+        height: 0dvh;
+        opacity: 0%;
+    }
+    
+    100% {
+        height: 40dvh;
+        opacity: 100%;
+    }
+}
 
 
 @keyframes fadeIn {
     0% {
         opacity: 0%;
+        transform: translateY(-40px);
     }
     100% {
         opacity: 100%;
+        transform: translateY(0px);
     }
 }
 
@@ -228,9 +293,180 @@
     }
 }
 
+@keyframes slideIn {
+    0% {
+      transform: translateX(-100%);
+      opacity: 0%;
+    }
+
+    80%{
+        opacity: 100%;
+    }
+
+    100% {
+      transform: translateX(0%);
+      opacity: 100%;
+    }
+  }
+  
+  @keyframes slideOut {
+    0% {
+      transform: translateX(0%);
+      opacity: 1;
+    }
+    100% {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+  }
+
+  @keyframes linkOpen {
+
+    0% {
+        height: 0px;
+        opacity: 0;
+        transform: translateX(-100%);
+    }
+
+    50% {
+        opacity: 0%;
+    }
+
+    100% {
+        height: max-content;
+        opacity: 1;
+        transform: translateY(0%);
+    }
+
+  }
+
+  /* Responsiveness */
+  
+  @media (max-width: 768px) {    /* Mobile Specefic */
+
+    .sub_links_container_m {
+        display: none;
+    }
+
+    .main_link_container_m.active .sub_links_container_m {
+        animation: linkOpen 200ms cubic-bezier(0.175, 0.885, 0.32, 0.8) forwards;
+        display: block;
+    }
+
+    
+    .main_link_container_m {
+        transform: translateX(-100%);
+
+    }
+    .main_link_m {
+        color: white;
+        font-weight: bold;
+    }
+
+    .sub_link_m a {
+        color: rgb(255, 255, 255);
+        font-weight: bold;
+    }
+
+    .sub_sub_link_m a {
+        color: rgb(233, 233, 233);
+        font-weight: normal;
+    }
+
+    .navigation_mobile.slide-in .main_link_container_m {
+        animation: slideIn 200ms cubic-bezier(0.175, 0.885, 0.32, 1.1) forwards;
+    }
+
+    .navigation_mobile.slide-in .main_link_container_m:nth-child(1),
+    .navigation_mobile.slide-out .main_link_container_m:nth-child(1){
+        animation-delay: 100ms;
+    }
+
+    .navigation_mobile.slide-in .main_link_container_m:nth-child(2),
+    .navigation_mobile.slide-out .main_link_container_m:nth-child(2){
+        animation-delay: 150ms;
+    }
+
+    .navigation_mobile.slide-in .main_link_container_m:nth-child(3),
+    .navigation_mobile.slide-out .main_link_container_m:nth-child(3){
+        animation-delay: 200ms;
+    }
+
+    .navigation_mobile.slide-in .main_link_container_m:nth-child(4),
+    .navigation_mobile.slide-out .main_link_container_m:nth-child(4){
+        animation-delay: 250ms;
+    }
+    
+    .navigation_mobile.slide-in .main_link_container_m:nth-child(5),
+    .navigation_mobile.slide-out .main_link_container_m:nth-child(5){
+        animation-delay: 300ms;
+    }
 
 
-/* Responsiveness */
+    .main_links_list_m {
+        padding-top: 10%;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        width: 90dvw;
+        text-align: center;
+    }
+
+
+    .main_link_container_m::before {
+        content: "";
+        display: block;
+        height: 1px;
+        background-color: #0d3135;
+    }
+
+    
+    .close_button {
+      position: absolute;
+      right: 40px;
+      top: 40px;
+    }
+  
+    .navigation_mobile {
+      position: fixed;
+      width: 100%;
+      background-color: #d3793c;
+      padding-top: 45px;
+      top: 0;
+      left: 0;
+      transform: translateX(-100%);
+      z-index: 3;
+      will-change: transform;
+      opacity: 0;
+      pointer-events: none;
+      display: flex;
+      justify-content: center;
+      overflow-y: auto;
+      overflow-x: hidden;
+      height: 100vh;
+    }
+  
+    .navigation_mobile.slide-in {
+      animation: slideIn 200ms ease-in-out forwards;
+      opacity: 1;
+      pointer-events: auto;
+    }
+  
+    .navigation_mobile.slide-out {
+      animation: slideOut 200ms ease-in-out forwards;
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    .logo_mobile_nav {
+      height: 50px;
+      position: absolute;
+      left: 40px;
+      top: 28px;
+    }
+
+  }
+
 
 @media (min-width: 10px){
 
@@ -252,6 +488,9 @@
 
     .nav_links {
         display: none;
+        align-items: center;
+        height: 100%;
+        width: 100%;
     }
 
     .logo_desktop {
@@ -278,6 +517,11 @@
 
 
 @media (min-width: 768px){
+
+    .navigation_mobile {
+        display: none;
+    }
+
     .header {
         width: 80%;
     }
