--- a/assets/custom-banner.css
+++ b/assets/custom-banner.css
@@ -87,14 +87,13 @@
   font-size: 24px;
   font-weight: 700;
   text-decoration: none;
-  transition: all 0.3s ease;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.15);
 }
 
 .banner-button:hover {
-  background-color: #ff6a2a;
-  transform: translateY(-2px);
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  background-color: rgb(255, 255, 255);
+  color: #083135;
+  transform: scale(0.9);
 }
 
 /* Responsive styles */
@@ -112,7 +111,7 @@
 
   .banner-description {
     font-size: 15px;  
-    width: 85%;
+    width: 60%;
   }
 
   .slide_container {
@@ -164,6 +163,8 @@
   }
 
   .banner-description {
-    font-size: 18px;
+    font-size: 20px;
+    line-height: 35px;
+    width: 40%;
   }
 }
