--- a/assets/header.css
+++ b/assets/header.css
@@ -199,7 +199,7 @@
     display: none;
     justify-content: center;
     height: 0px;
-    width: 100dvw;
+    width: 100%;
     padding-top: 35px;
     border-radius: 5px;
     transform-origin: center;
@@ -240,7 +240,7 @@
 
 .menu-item:hover > .submenu {
     display: flex;
-    animation: dropDown 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1) forwards;
+    animation: dropDown 300ms cubic-bezier(0.175, 0.885, 0.32, 1.0) forwards;
 }
 
 
@@ -340,129 +340,219 @@
 
   }
 
+  @keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(-90deg);
+    }
+  }
+
+
   /* Responsiveness */
   
   @media (max-width: 768px) {    /* Mobile Specefic */
 
-    .sub_links_container_m {
-        display: none;
+    .controls_container {
+        height: max-content;
+        width: 90%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
-    .main_link_container_m.active .sub_links_container_m {
-        animation: linkOpen 200ms cubic-bezier(0.175, 0.885, 0.32, 0.8) forwards;
-        display: block;
+    .close_button {
+      filter: invert(99%) sepia(2%) saturate(619%) hue-rotate(250deg) brightness(117%) contrast(90%);
+      transition: 200ms cubic-bezier(0.175, 0.885, 0.32, 1.2);
+      transform: scale(1);
     }
 
-    
-    .main_link_container_m {
+    .close_button:hover {
+        transform: scale(0.8);
+    }
+
+    .logo_mobile_nav {
+      filter: invert(99%) sepia(2%) saturate(619%) hue-rotate(250deg) brightness(117%) contrast(90%);
+      height: 50px;
+    }
+
+    .navigation_mobile {
+        position: fixed;
+        width: 100%;
+        background-color: #d3793c;
+        padding: 50px 0px;
+        top: 0;
+        left: 0;
         transform: translateX(-100%);
+        z-index: 3;
+        will-change: transform;
+        opacity: 0;
+        pointer-events: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+        overflow-y: auto;
+        overflow-x: hidden;
+        height: 100vh;
+      }
+    
+      .navigation_mobile.slide-in {
+        animation: slideIn 200ms ease-in-out forwards;
+        opacity: 1;
+        pointer-events: auto;
+      }
+    
+      .navigation_mobile.slide-out {
+        animation: slideOut 200ms ease-in-out forwards;
+        opacity: 0;
+        pointer-events: none;
+      }
 
-    }
-    .main_link_m {
-        color: white;
-        font-weight: bold;
-    }
 
-    .sub_link_m a {
-        color: rgb(255, 255, 255);
-        font-weight: bold;
-    }
-
-    .sub_sub_link_m a {
-        color: rgb(233, 233, 233);
-        font-weight: normal;
+    .main_link_container_m {
+        width: 90dvw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transform: translateX(-100%);
+        opacity: 0;
     }
 
     .navigation_mobile.slide-in .main_link_container_m {
         animation: slideIn 200ms cubic-bezier(0.175, 0.885, 0.32, 1.1) forwards;
     }
 
-    .navigation_mobile.slide-in .main_link_container_m:nth-child(1),
+  .navigation_mobile.slide-in .main_link_container_m:nth-child(1),
     .navigation_mobile.slide-out .main_link_container_m:nth-child(1){
         animation-delay: 100ms;
     }
 
     .navigation_mobile.slide-in .main_link_container_m:nth-child(2),
     .navigation_mobile.slide-out .main_link_container_m:nth-child(2){
-        animation-delay: 150ms;
+        animation-delay: 125ms;
     }
 
     .navigation_mobile.slide-in .main_link_container_m:nth-child(3),
     .navigation_mobile.slide-out .main_link_container_m:nth-child(3){
-        animation-delay: 200ms;
+        animation-delay: 150ms;
     }
 
     .navigation_mobile.slide-in .main_link_container_m:nth-child(4),
     .navigation_mobile.slide-out .main_link_container_m:nth-child(4){
-        animation-delay: 250ms;
+        animation-delay: 200ms;
     }
     
     .navigation_mobile.slide-in .main_link_container_m:nth-child(5),
     .navigation_mobile.slide-out .main_link_container_m:nth-child(5){
-        animation-delay: 300ms;
-    }
-
-
-    .main_links_list_m {
-        padding-top: 10%;
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-        width: 90dvw;
-        text-align: center;
-    }
-
-
-    .main_link_container_m::before {
-        content: "";
-        display: block;
-        height: 1px;
-        background-color: #0d3135;
+        animation-delay: 250ms;
     }
 
     
-    .close_button {
-      position: absolute;
-      right: 40px;
-      top: 40px;
-    }
-  
-    .navigation_mobile {
-      position: fixed;
-      width: 100%;
-      background-color: #d3793c;
-      padding-top: 45px;
-      top: 0;
-      left: 0;
-      transform: translateX(-100%);
-      z-index: 3;
-      will-change: transform;
-      opacity: 0;
-      pointer-events: none;
-      display: flex;
-      justify-content: center;
-      overflow-y: auto;
-      overflow-x: hidden;
-      height: 100vh;
-    }
-  
-    .navigation_mobile.slide-in {
-      animation: slideIn 200ms ease-in-out forwards;
-      opacity: 1;
-      pointer-events: auto;
-    }
-  
-    .navigation_mobile.slide-out {
-      animation: slideOut 200ms ease-in-out forwards;
-      opacity: 0;
-      pointer-events: none;
+
+    .main_links_list_m {
+        padding-top: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+        gap: 10px;
+        text-align: center;
     }
 
-    .logo_mobile_nav {
-      height: 50px;
-      position: absolute;
-      left: 40px;
-      top: 28px;
+    .main_link_m {
+        display: flex;
+        width: 90%;
+        justify-content: space-between;
+        color: white;
+        font-weight: bold;
+        font-size: 20px;
+    }
+
+
+    .arrow_icon {
+        height: 60%;
+        filter: invert(99%) sepia(2%) saturate(619%) hue-rotate(250deg) brightness(117%) contrast(90%);
+    }
+
+    .main_link_m.active > .arrow_icon {
+        animation: rotate 300ms cubic-bezier(0.175, 0.885, 0.32, 1.5) forwards;
+    }
+
+
+    .sub_links_container_m {
+        display: none;
+        overflow: hidden;
+        height: max-content;
+        opacity: 0;
+        animation: linkOpen 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1) forwards;
+    }
+
+    .main_link_m.active ~ .sub_links_container_m {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        opacity: 1;
+    }
+
+    .sub_link_m::before {
+        content: "";
+        width: 85dvw;
+        display: block;
+        align-content: center;
+        height: 1px;
+        margin-bottom: 10px;
+        background-color: #dbdbdb6e;
+    }
+
+    .sub_link_m {
+        padding: 5px 0px;
+        display: block;
+    }
+
+
+    .sub_link_m p {
+        color: rgb(255, 255, 255);
+        font-weight: bold;
+        font-size: 14px;
+        text-align: right;
+        padding-right: 25px;
+    }
+
+    .sub_sub_link_m {
+        text-align: right;
+    }
+
+    .sub_sub_link_m a {
+        display: block;
+        color: rgb(233, 233, 233);
+        font-weight: normal;
+        padding-right: 50px;
+        width: 100%;
+        height: 100%;
+    }
+
+    .sub_sub_link_m a:hover {
+        color: white;
+    }
+
+    .sub_link_m.active .sub_sub_links_container_m {
+        animation: slideIn 200ms cubic-bezier(0.175, 0.885, 0.32, 1.05) forwards;
+        display: block;
+    }
+
+    .sub_sub_links_container_m {
+        padding-top: 5px;
+        transform: translate(-100%);
+        opacity: 0;
+        display: none;
+        height: max-content;
+        transition: 300ms cubic-bezier(0.175, 0.885, 0.32, 1.1);
     }
 
   }
