Collection Page added + Bug Fixes

--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -98,7 +98,7 @@
     }
   });
 
-  // Fix Buy Now button (only affects visible/active section)
+  //Buy Now button (only affects visible/active section)
   document.querySelectorAll(".buy-now-button").forEach(button => {
     button.addEventListener("click", function (event) {
       event.preventDefault();
