--- a/assets/custom_product_grid.css
+++ b/assets/custom_product_grid.css
@@ -1,21 +1,24 @@
-.featured-collection-wrapper {
+.collection-products-wrapper {
     width: 100%;
+    height: max-content;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: max-content;
-    padding: 50px 0px;
-    user-select: none;
-    background-color: #0d3135;
+    padding: 30px 0;
+
 }
 
-.featured-collection {
-    width: 75dvw;
+.collection-products {
+    width: 90dvw;
+    overflow: hidden;
     height: max-content;
-    display: flex;
-    gap: 2%;
-    flex-shrink: 0;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: repeat(auto-fill, 280px);
+    gap: 20px;
 }
+
 
 .collection-image {
     width: 500px;
@@ -51,28 +54,11 @@
     user-select: none;
 }
 
-.collection-products-wrapper {
-    width: 75%;
-    border-radius: 30px;
-    overflow-y: hidden;
-    overflow-x: scroll;
-    white-space: normal;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-}
-
 .collection-products-wrapper::-webkit-scrollbar {
     display: none;
 }
 
-.collection-products {
-    width: max-content;
-    height: 100%;
-    display: flex;
-    justify-content: flex-start;
-    gap: 1%;
-    flex-shrink: 0;
-}
+
 
 .product-card {
     height: 500px;
@@ -208,17 +194,19 @@ button.add-to-cart-button:hover > img {
 
 /* Responiveness */
 
-@media (max-width: 450px) {
+@media (max-width: 644px) {
+
+    .collection-products {
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
+
     .featured-collection {
         flex-direction: column;
         gap: 15px;
         width: 90dvw;
     }
 
-    .collection-products-wrapper {
-        width: 100%;
-        border-radius: 15px;
-    }
 
     .collection-image {
         width: 100%;
@@ -231,7 +219,7 @@ button.add-to-cart-button:hover > img {
     }
 
     .product-card {
-        width: 46dvw;
+        width: 100%;
         height: 320px;
         max-height: 500px;
         padding-bottom: 45px;
